Add ROS wrapper

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,24 +1,23 @@
 SET(PROJECT_NAME SDSO C CXX)
 
 PROJECT(${PROJECT_NAME})
-CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
+cmake_minimum_required(VERSION 3.18)
 
 set(BUILD_TYPE RelWithDebInfo)
 
 set(CMAKE_GENERATOR "Ninja")
 
 include(dependencies.cmake)
+include(cmake/options.cmake)
 
 set(EXECUTABLE_OUTPUT_PATH bin)
 set(LIBRARY_OUTPUT_PATH lib)
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
-# required libraries
 find_package(SuiteParse REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(Boost COMPONENTS system thread)
 
-# optional libraries
 find_package(LibZip QUIET)
 find_package(Pangolin 0.2 QUIET)
 
@@ -27,12 +26,6 @@ add_definitions("-DENABLE_SSE")
 set(CMAKE_CXX_FLAGS
         "${SSE_FLAGS}"
         )
-
-#add_definitions("-DENABLE_SSE")
-#set(CMAKE_CXX_FLAGS
-#   "${SSE_FLAGS} -O3 -fPIC -g -std=c++0x -march=native"
-##   "${SSE_FLAGS} -O3 -g -std=c++0x -fno-omit-frame-pointer"
-#)
 
 # Sources files
 set(sdso_SOURCE_FILES
@@ -59,7 +52,10 @@ set(sdso_SOURCE_FILES
         )
 
 include_directories(
-        ${PROJECT_SOURCE_DIR}/src
+        ${PROJECT_SOURCE_DIR}/src/FullSystem
+        ${PROJECT_SOURCE_DIR}/src/IOWrapper
+        ${PROJECT_SOURCE_DIR}/src/OptimizationBackend
+        ${PROJECT_SOURCE_DIR}/src/util
         ${PROJECT_SOURCE_DIR}/thirdparty/Sophus
         ${EIGEN3_INCLUDE_DIR}
 )
@@ -95,8 +91,6 @@ endif ()
 include_directories(${CSPARSE_INCLUDE_DIR} ${CHOLMOD_INCLUDE_DIR})
 add_library(sdso ${sdso_SOURCE_FILES} ${sdso_pangolin_SOURCE_FILES})
 
-#set_property( TARGET sdso APPEND_STRING PROPERTY COMPILE_FLAGS -Wall )
-
 
 # build main executable (only if we have both OpenCV and Pangolin)
 if (Pangolin_FOUND)
@@ -106,5 +100,46 @@ if (Pangolin_FOUND)
     target_link_libraries(sdso_dataset sdso boost_system boost_thread cxsparse ${LIBZIP_LIBRARY} ${Pangolin_LIBRARIES})
 else ()
     message("--- not building sdso_dataset, since either don't have openCV or Pangolin.")
+endif ()
+
+# NOTE: if there is a need to build with ROS, use catkin build only
+if (BUILD_WITH_ROS)
+    message("Building as a ROS package")
+    find_package(catkin REQUIRED COMPONENTS
+            geometry_msgs
+            roscpp
+            sensor_msgs
+            tf2
+            tf2_ros
+            pcl_conversions
+            cv_bridge
+            message_filters
+            )
+    find_package(PCL 1.8 REQUIRED)
+    # TODO: think how to build locally
+    find_package(Boost COMPONENTS system thread filesystem chrono serialization date_time timer regex)
+    catkin_package(
+            CATKIN_DEPENDS
+            geometry_msgs
+            tf2
+            tf2_ros
+            pcl_conversions
+            roscpp
+            sensor_msgs
+            cv_bridge
+            message_filters
+    )
+    include_directories(
+            ${PROJECT_SOURCE_DIR}/src/ROSWrapper
+            ${PCL_INCLUDE_DIRS}
+            ${catkin_INCLUDE_DIRS}
+    )
+    add_executable(sdso_ros src/stereo_dso_ros.cpp src/ROSWrapper/ROSOutputWrapper.cpp)
+    target_link_libraries(sdso_ros
+            sdso
+            ${Pangolin_LIBRARIES}
+            ${BOOST_THREAD_LIBRARY}
+            ${PCL_LIBRARIES}
+            ${catkin_LIBRARIES})
 endif ()
 
