Make accumulating PCL optional & Add resetting

--- a/config/common.yaml
+++ b/config/common.yaml
@@ -9,6 +9,7 @@ marginRadiusSearch: 0.2
 
 # For localization
 publishMarginCloud: false
+accumulateGlobalCloud: false
 useReferenceCloud: true
 referenceCloudPath: "/home/wfram/.ros/dmvio_global_cloud.pcd"
 
